--- a/application_0.0/modules/agent/templates/save-interface.html
+++ b/application_0.0/modules/agent/templates/save-interface.html
@@ -1,6 +1,5 @@
-<link rel="stylesheet" href="../resources/agent/main.css" type="text/css" media="screen"/>	
-<script type="text/javascript" src="../resources/agent/jquery-1.8.1.min.js"></script>
-<script type="text/javascript" src="../resources/agent/interface.js"></script>
+<link rel="stylesheet" href="http://apskel.com/resources/agent/main.css" type="text/css" media="screen"/>	
+<script src="resources/jquery-1.8.1.min.js"></script>
 <div id="agent_interface_view_wrapper" class="view_wrapper">
 	<span id="title">{{title}}</span><br/><hr/>
 	<div id="message_area" class="message_area">
@@ -13,5 +12,4 @@
 	<div>
 	
 	<input id="user_statement" class="input" value=""/><br/>
-	<div id="full_response" class="hidden_data"/>
 </div>
