Miscellanous bug fixes

--- a/application_0.0/modules/agent/views/reactions.html
+++ b/application_0.0/modules/agent/views/reactions.html
@@ -48,7 +48,7 @@
 			<tr>
 				<td colspan="3">
 					<label for="actions_edit">Reactions:</label><br/> 
-					<textarea id="actions_edit" name="actions" class="reaction_actions modifiable"></textarea>
+					<textarea id="actions_edit" name="actions" class="reaction_actions modifiable">say ""</textarea>
 				</td>
 			</tr>
 		</table>
