installs better on hosted sites + bug fixes

--- a/application_0.0/modules/agent/views/meaning.html
+++ b/application_0.0/modules/agent/views/meaning.html
@@ -1,6 +1,6 @@
 	<tr>
 		<td>
-			<a id="meaning_{{id}}" href="reactions?meaning_id={{id}}" target="_blank">{{recognizer}}</a>
+			<a id="meaning_{{id}}" href="{{@link}}reactions?meaning_id={{id}}" target="_blank">{{recognizer}}</a>
 		</td>
 		<td align="center">
 			<select id="paradigm_{{id}}" name="paradigm_{{id}}">
