--- a/application_0.0/modules/agent/views/converse.html
+++ b/application_0.0/modules/agent/views/converse.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{@resource}}jquery-ui/css/ui-lightness/jquery-ui-1.8.24.custom.css" type="text/css" media="screen"/>        
+<link rel="stylesheet" href="{{@resource}}/jquery-ui/css/ui-lightness/jquery-ui-1.8.24.custom.css" type="text/css" media="screen"/>        
 <script type="text/javascript" src="{{@resource}}/jquery-ui/js/jquery-1.8.2.min.js"></script>
 <script type="text/javascript" src="{{@resource}}/jquery-ui/js/jquery-ui-1.8.24.custom.min.js"></script>
 <link rel="stylesheet" href="{{@resource}}/main.css" type="text/css" media="screen"/>
@@ -6,20 +6,18 @@
 
 <!-- HTML Conversational Agent Interface -->
 <div id="agent_interface_wrapper" class="view_wrapper">
-	<span id="title" class="major_title">Conversation: {{topic}}</span>
+	{{=application_header.html}}
+	<span id="title" class="minor_title">Conversation: {{topic}}</span>
 	<hr/>
-	<div id="message_area" class="message_area">
-		<span id="messages" class="messages">{{messages}}</span><br/>
-		<span id="warnings" class="warnings">{{warnings}}</span><br/>
-	</div>
+	{{=message_area.html}}
 	<br/>
 	<div id="transcript">{{transcript}}</div>
 	
 	<input id="user_statement" class="input" value=""/><br/>
 	<hr/>
 	<div id="converse_footer" class="footer">
-		<a href="{{@link}}meanings" target="_blank">( Edit Brain )</a><br/>
-{{=shared_footer.html}}
+		<a href="{{@link}}/meanings" target="_blank">( Edit Brain )</a><br/>
+{{=application_footer.html}}
 	</div>
 
 	<!-- Catches Agent Response Messages for Javascript to Process -->
