Fixes to matching code..

--- a/application_0.0/modules/agent/views/converse.html
+++ b/application_0.0/modules/agent/views/converse.html
@@ -7,7 +7,7 @@
 <!-- HTML Conversational Agent Interface -->
 <div id="agent_interface_wrapper" class="view_wrapper">
 	{{=application_header.html}}
-	<span id="title" class="minor_title">Conversation: {{topic}}</span>
+	<span id="title" class="minor_title">Conversation With {{name}}</span>
 	<hr/>
 	{{=message_area.html}}
 	<br/>
