Added beginnings of default page and wiki module

--- a/application_0.0/views/application_footer.html
+++ b/application_0.0/views/application_footer.html
@@ -1,5 +1,5 @@
 <div id="application_footer" class="footer">
-	Copyright (C) By Matthew C. Tedder 
+	Copyright (C) 2018 By Matthew C. Tedder 
 	| <a href="">Contact</a>
 	| <a href="{{@link}}/../user/logout">Logout</a>
 </div>
